--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -373,13 +373,6 @@ header {
 }
 
 /* ==========================================================================
-Social share buttons
-========================================================================== */
-.share-bar {
-  margin-top: 20px;
-}
-
-/* ==========================================================================
 Intro
 ========================================================================== */
 .intro span.icon {
@@ -549,9 +542,9 @@ Features-stack
 }
 
 /* ==========================================================================
-.events
+.chiesa
 ========================================================================== */
-.events {
+.chiesa {
   .leftcol {
     padding-right: 100px;
     border-right: solid 1px $keyline-color;
